@@ -262,8 +262,12 @@ installbyt:
 	cd stdlib ; $(MAKEREC) install
 	cp lex/ocamllex $(INSTALL_BINDIR)/ocamllex.exe
 	cp yacc/ocamlyacc.exe $(INSTALL_BINDIR)/ocamlyacc.exe
-	cp utils/*.cmi parsing/*.cmi typing/*.cmi bytecomp/*.cmi driver/*.cmi \
-	   toplevel/*.cmi $(INSTALL_COMPLIBDIR)
+	cp utils/*.cmi utils/*.cmt utils/*.cmti \
+	   parsing/*.cmi parsing/*.cmt parsing/*.cmti \
+	   typing/*.cmi typing/*.cmt typing/*.cmti \
+	   bytecomp/*.cmi bytecomp/*.cmt bytecomp/*.cmti \
+	   driver/*.cmi driver/*.cmt driver/*.cmti \
+	   toplevel/*.cmi toplevel/*.cmt toplevel/*.cmti $(INSTALL_COMPLIBDIR)
 	cp compilerlibs/ocamlcommon.cma compilerlibs/ocamlbytecomp.cma \
 	   compilerlibs/ocamltoplevel.cma $(BYTESTART) $(TOPLEVELSTART) \
 	   $(INSTALL_COMPLIBDIR)
@@ -290,7 +294,7 @@ installopt:
 	cd asmrun ; $(MAKEREC) install
 	cp ocamlopt $(INSTALL_BINDIR)/ocamlopt.exe
 	cd stdlib ; $(MAKEREC) installopt
-	cp asmcomp/*.cmi $(INSTALL_COMPLIBDIR)
+	cp asmcomp/*.cmi asmcomp/*.cmt asmcomp/*.cmti $(INSTALL_COMPLIBDIR)
 	cp compilerlibs/ocamloptcomp.cma $(OPTSTART) $(INSTALL_COMPLIBDIR)
 	if test -n "$(WITH_OCAMLDOC)"; then (cd ocamldoc; $(MAKEREC) installopt); fi
 	if test -n "$(WITH_OCAMLBUILD)"; then (cd ocamlbuild; $(MAKE) installopt); \
